--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <main>
         <header></header>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#jelentkezes">Jelentkezés</a></li>
-            <li><a href="https://mernokvagyok.hu" target="_blank">Forrás</a></li>
+        <ul class="navbar">
+            <li class="navbar2"><a href="#home">Home</a></li>
+            <li class="navbar2"><a href="#jelentkezes">Jelentkezés</a></li>
+            <li class="navbar2"><a href="https://mernokvagyok.hu" target="_blank">Forrás</a></li>
         </ul>
 
             <section>
