--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
                 <p>
                     Az első magyar M–3 az MTA Számítástechnikai Központjában 1960 és 1965 között működött üzemszerűen. 1965-ben a szegedi József Attila Tudományegyetemre szállították, ahol 1968. január 2-ig működött. (Egy ún. nulladik generációs számítógépet már az M-3 előtt megépítettek a Műegyetemen Kozma László irányításával, ez a masina azonban elektromágneses relékből épült, még nem felelt meg a Neumann-elveknek.)
                 </p>
-                <img src="" alt="kep">
+                <aside>
+                    <img src="img/kep1.jpg" alt="kep">
+                    <img src="img/Jandy-Geza-ifj..jpg" alt="Jandy Géza">
+                    <img src="img/Kreko-Bela-fenykepe-r.jpg" alt="Krekó Béla">
+                </aside>
+
                 <h3>Történeti érdekességek</h3>
                 <p>
                     A gép összességében 770 elektroncsőből és 2000 kuprox-diódából állt, közel 500 alegységbe szervezve, és mintegy 30 m² területet foglalt el; 10 kW fogyasztása miatt hűtése komoly problémát okozott. A hálózati feszültségingadozások kiküszöbölése érdekében a tápfeszültséget egy motorgenerátor szolgáltatta. Dobmemóriából négyet is a géphez lehetett (volna) kapcsolni. Hibakeresésre és tesztelésre külön „alegység-vizsgáló” berendezés szolgált.
