--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
             <li class="navbar2"><a href="https://mernokvagyok.hu" target="_blank">Forrás</a></li>
         </ul>
 
+        <ul>
+            <li class="navbar2"><a href="#m3">M-3 jelentősége</a></li>
+            <li class="navbar2"><a href="#jelentkezess">Jelentkezés</a></li>
+            <li class="dropdown">
+              <a href="javascript:void(0)" class="dropbtn">Forrás</a>
+              <div class="dropdown-content">
+                <a href="https://mernokvagyok.hu">mernokvagyok.hu</a>
+                <a href="https://njszt.hu/">njszt.hu 2</a>
+              </div>
+            </li>
+          </ul>
 
             <section>
                 <h1>Magyar Informatika Napja</h1>
@@ -55,8 +66,6 @@
                 </ul>
             
                 </section>
-
-
 
         <form action="" name="data">
             <h3>Magyar Informatika Napja konferenciára jelentkezés</h3>
@@ -102,6 +111,6 @@
             <p>készítette: Béládi Barnabás, Kovács Balázs</p>
         </footer>
     </main>
-    
+    <script src="java.js"></script>
 </body>
 </html>
