--- a/index.html
+++ b/index.html
@@ -16,17 +16,6 @@
             <li class="navbar2"><a href="https://mernokvagyok.hu" target="_blank">Forrás</a></li>
         </ul>
 
-        <ul>
-            <li class="navbar2"><a href="#m3">M-3 jelentősége</a></li>
-            <li class="navbar2"><a href="#jelentkezess">Jelentkezés</a></li>
-            <li class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn">Forrás</a>
-              <div class="dropdown-content">
-                <a href="https://mernokvagyok.hu">mernokvagyok.hu</a>
-                <a href="https://njszt.hu/">njszt.hu 2</a>
-              </div>
-            </li>
-          </ul>
 
             <section>
                 <h1>Magyar Informatika Napja</h1>
@@ -39,12 +28,18 @@
                 </p>
                 <aside>
 
-                    <caption>
+                    <div>
                         <img src="img/Jandy-Geza-ifj..jpg" alt="Jandy Géza">
-                        <h1>leiras</h1>
-                    </caption>
-                    <img src="img/kep1.jpg" alt="kep">
-                    <img src="img/Kreko-Bela-fenykepe-r.jpg" alt="Krekó Béla">
+                        <h4>Jandy Géza</h4>
+                    </div>
+                    <div>
+                        <img src="img/kep1.jpg" alt="kep">
+                        <h4>M-3 számítógép</h4>
+                    </div>
+                    <div>
+                        <img src="img/Kreko-Bela-fenykepe-r.jpg" alt="Krekó Béla">
+                        <h4>Krekó Béla</h4>
+                    </div>
                 </aside>
 
                 <h3>Történeti érdekességek</h3>
